Added email bram

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "homepage": "https://github.com/brammittendorff/my-screeps",
   "authors": [
     "webber <webber.nl@gmail.com>",
-    "bram <>"
+    "bram <botw44@gmail.com>"
   ],
   "description": "",
   "main": "",
