--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-env": "^0.4.4",
-    "grunt-screeps": "^1.2.1"
-  },
-  "devDependencies": {
+    "grunt-screeps": "^1.2.1",
     "grunt-contrib-concat": "^1.0.1"
   },
   "scripts": {
