--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-jscs": "^3.0.1",
     "grunt-screeps": "^1.2.1"
   },
+  "devDependencies": {},
   "scripts": {
     "test": "mocha"
   },
@@ -29,8 +30,5 @@
   "bugs": {
     "url": "https://github.com/brammittendorff/my-screeps/issues"
   },
-  "homepage": "https://github.com/brammittendorff/my-screeps#readme",
-  "devDependencies": {
-    "grunt-contrib-copy": "^1.0.0"
-  }
+  "homepage": "https://github.com/brammittendorff/my-screeps#readme"
 }
