Added shard to .env

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,11 @@
 SCREEPS_TOKEN=your_token_here
 
 # Deployment settings
-SCREEPS_BRANCH=main
+SCREEPS_BRANCH=default
 SCREEPS_HOST=screeps.com
 SCREEPS_PORT=443
 SCREEPS_PROTOCOL=https
+SCREEPS_SHARD=shard3
 
 # For private server
 # SCREEPS_HOST=localhost
