Added defender market trends and swamp improvements

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "keywords": [
     "screeps"
   ],
-  "author": "Bram & Webber",
+  "author": "Bram Mittendorff",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/brammittendorff/my-screeps/issues"
